<resources>
    <string name="_15Mbps_">15Mbps</string>
    <string name="_1Mbps_">1Mbps</string>
    <string name="_256Kbps_">256Kbps</string>
    <string name="_25Mbps_">25Mbps</string>
    <string name="_2Mbps_">2Mbps</string>
    <string name="_4Mbps_">4Mbps</string>
    <string name="_512Kbps_">512Kbps</string>
    <string name="_7Mbps_">7Mbps</string>
    <string name="_AboutProjectors_">About Projectors</string>
    <string name="_About_">About this App</string>
    <string name="_AddBarHint_">Search or type URL</string>
    <string name="_AddToBookmark_">Add bookmark</string>
    <string name="_Agree_">Agree</string>
    <string name="_AgreementForEula_">You need to agree to the Epson iProjection SOFTWARE LICENSE AGREEMENT and Privacy Statement to use this application.</string>
    <string name="_AgreementForGa_">The Epson iProjection Privacy Statement outlines the information collected by the Seiko Epson Corporation while using this application.\nSelect the following check box if you want to help us study how the app is used. You can change this feature later in [Join the Usage Survey] from the application settings menu.</string>
    <string name="_AllowLocationPermission_">Allow access to this device’s location*</string>
    <string name="_AllowToCameraPermission_">Please allow access to your camera.</string>
    <string name="_AllowToStoragePermission_">Please allow access to your storage.</string>
    <string name="_AllowToUserOperateMsg_">Do you want to allow the user operation?</string>
    <string name="_AllowToUserOperate_">Allow User Operations</string>
    <string name="_AllowToWiFiConnectionLocationPermission_">Please allow access to this device’s location.</string>
    <string name="_AlreadyExistModerator_">Because there is already a moderator, you have been connected as a participant.</string>
    <string name="_AppSettings_">App Settings</string>
    <string name="_AppUpdateNow_">Cannot get the projector information in this version of iProjection. Do you want to update?</string>
    <string name="_ApplicationName_">iProjection</string>
    <string name="_ApplyToAll_">Apply to all</string>
    <string name="_AreUsing_">are in use.</string>
    <string name="_AsModeratorOn_">When this function is enabled, operations are partially restricted for other connected users.</string>
    <string name="_Authenticating_">Authenticating...</string>
    <string name="_AuthenticationError_">Authentication failed.</string>
    <string name="_AutoDisplayDelivery_">Display the shared images automatically</string>
    <string name="_AutoDisplayReceivedImageWantOpen_">Moderator has shared an image.\nDo you want to open it?</string>
    <string name="_AutoDisplayReceivedImage_">Moderator has shared an image.</string>
    <string name="_BandWidth_">Use Bandwidth</string>
    <string name="_BasicPassword_">Enter the Remote Password.</string>
    <string name="_BatchOperation_">Batch Operations</string>
    <string name="_BecomeModerator_">Become Moderator</string>
    <string name="_BookmarkIsFull_">Cannot add any more bookmarks.</string>
    <string name="_Bookmarks_">Bookmarks</string>
    <string name="_Busy_">(Busy)</string>
    <string name="_Camera_">Camera</string>
    <string name="_Cancel_">Cancel</string>
    <string name="_CanceledSearching_">Canceled.</string>
    <string name="_CannotBecomeModerator_">Cannot become moderator.</string>
    <string name="_CannotPerformOperationsModerator_">Cannot perform operations at this time because \"%s\" is a moderator.</string>
    <string name="_CannotPlayMirroingWithoutOverlay_">To start mirroring, allow iProjection.</string>
    <string name="_CannotShare_">Sharing failed.</string>
    <string name="_CannotUseCamera_">Cannot use the camera.</string>
    <string name="_ChangeWiFiNetwork_">Change the Wi-Fi network</string>
    <string name="_ChangedWiFiSettingsResetConfirmOld_">The Wi-Fi settings were changed when the connection was established. Do you want to reset the Wi-Fi settings?</string>
    <string name="_ChangedWiFiSettingsResetConfirm_">Wi-Fi settings were changed when connecting. Do you want to return the Wi-Fi settings to how they were before connecting?</string>
    <string name="_ChangedWiFiSettings_">The Wi-Fi settings were changed when the connection was established.</string>
    <string name="_ClearScreen_">Clear Screen</string>
    <string name="_Close_">Close</string>
    <string name="_Color_">Color</string>
    <string name="_ConfirmDisconnect_">Disconnect from projector?</string>
    <string name="_ConnectAsModerator_">Connect as a Moderator</string>
    <string name="_ConnectFail_">The connection of the projector failed.</string>
    <string name="_ConnectNGForMobile_">\n\n*Please turn off your Mobile Network.</string>
    <string name="_ConnectNGIncludeUnavailable_">\n\n(Projectors that do not support connection have been included.)</string>
    <string name="_ConnectNGPowerOff_">\n\n(The projector is not turned on.)</string>
    <string name="_ConnectNGPre_">Cannot connect.</string>
    <string name="_ConnectToProjector_">Connect to the projector</string>
    <string name="_Connect_">Connect</string>
    <string name="_ConnectedMultiProjectors_">There are %d connected projectors</string>
    <string name="_ConnectedProjectors_">Connected Projectors</string>
    <string name="_Connected_">Connection successful.</string>
    <string name="_Connecting_">Connecting.</string>
    <string name="_ContactYourLocalDealer_">If you have any questions, contact your local dealer.</string>
    <string name="_Contents_">Contents</string>
    <string name="_ContinueConnectionProcess_">Do you want to continue the connection process?</string>
    <string name="_ContinueUsingRemocon_">Enable the remote control even after turning off the projector*</string>
    <string name="_CopyrightInformation_">Copyright Information</string>
    <string name="_Copyright_">Copyright(C) Seiko Epson Corporation 2012–%s.</string>
    <string name="_CurrentlyRunning_">The application is currently running.</string>
    <string name="_DateOrder_">Date Order</string>
    <string name="_DeleteAll_">Delete All</string>
    <string name="_DeleteDeliveryImages_">Are you sure you want to delete the selected files?</string>
    <string name="_DeleteRemotePassword_">Delete remote passwords. Continue?\n\n*When you select OK button, this app will be closed automatically.</string>
    <string name="_DeleteRemotePasswords_">Delete remote passwords</string>
    <string name="_Delete_">Delete</string>
    <string name="_DeliverNGDeliverImage_">Failed to share the image.</string>
    <string name="_DeliverNGDeliveryProcessing_">The projector is on processing.</string>
    <string name="_DeliveryButton_">Share the projected image while mirroring your device\'s screen</string>
    <string name="_DeliveryImage_">Sharing the projected image to connected devices</string>
    <string name="_DenyToUserOperateMsg_">Do you want to deny the user operation?</string>
    <string name="_DenyToUserOperate_">Deny User Operations</string>
    <string name="_DenyUserOperations_">User Operations Denied</string>
    <string name="_DeselectAll_">Deselect All</string>
    <string name="_DetailInformation_">Detail Information</string>
    <string name="_DeviceScreen_">Mirror device screen</string>
    <string name="_DifferentSSIDWhenRegisteredProjector_">Cannot find the projector. The SSID is different. Check the Wi-Fi settings.</string>
    <string name="_DisconnectAllUsers_">All users will be disconnected from the projector.\nDo you want to continue?</string>
    <string name="_DisconnectEventWithName_">The projector has disconnected.\n\nProjector Name:</string>
    <string name="_DisconnectEvent_">The projector has disconnected.</string>
    <string name="_DisconnectFromiProjection_">Disconnected.</string>
    <string name="_Disconnect_">Disconnect</string>
    <string name="_DisconnectedAdmin_">You have been disconnected by the host.</string>
    <string name="_DisconnectedOther_">You have been disconnected by another user.</string>
    <string name="_Disconnecting_">Disconnecting.</string>
    <string name="_DoNotAgree_">Do not agree</string>
    <string name="_DoYouConnectProjector_">Connect to the projector?</string>
    <string name="_Done_">Done</string>
    <string name="_DrawerClose_">Close</string>
    <string name="_DrawerOpen_">Open</string>
    <string name="_EasyMPNotSupportVer_">Cannot connect to the projector using this version of Epson iProjection.\nInstall the latest version of Epson iProjection.</string>
    <string name="_EditBookmark_">Edit bookmark</string>
    <string name="_Edit_">Edit</string>
    <string name="_EmptyMessage_">EmptyMessage</string>
    <string name="_Enable_">Enable</string>
    <string name="_EncryptedCommunication_">Encrypted communication</string>
    <string name="_EnterProfileURL_">Enter Profile URL</string>
    <string name="_EnterUserName_">Enter User Name</string>
    <string name="_EpsonSetupNavi_">Epson Setup Navi</string>
    <string name="_ErrMaxUser_">Cannot join. The maximum number of participants has been exceeded.</string>
    <string name="_ErrMirroringAnother_">The selected projector is performing group mirroring with another projector.</string>
    <string name="_ErrorNetworkConnection_">Cannot communicate with the projector. Check the network environment.</string>
    <string name="_ErrorSelectToProjector_">Select a projector on the home screen.</string>
    <string name="_Esc_">Esc</string>
    <string name="_Exceeded4PjConnect_">You can only connect when there are four or fewer registered projectors.</string>
    <string name="_ExitPressAgainDisconnect_">Press again to exit.</string>
    <string name="_ExitPressAgain_">Press again to exit.</string>
    <string name="_FailToSave_">Failed to save the image.</string>
    <string name="_FailToSwitchWifi_">Cannot switch Wi-Fi to \"%s.\" Switch to \"%s\" on the Wi-Fi Settings screen or delete the settings.</string>
    <string name="_FailedDeliveryImagesDeleting_">Failed to delete the files.</string>
    <string name="_GeneralSetup_">General Settings</string>
    <string name="_ImprovesWirelessDetection_">*The accuracy of wireless detection improves.</string>
    <string name="_JoinTheUsageSurvey_">Join the Usage Survey</string>
    <string name="_OpenApp_">Open app</string>
    <string name="_OptimiseUltraWideSPS2_">Automatically trim the black bars on the screen\n(when Screen Type is set to: 16:6, 21:9)</string>
    <string name="_OtherAppExplanation_">Project the screen from your device</string>
    <string name="_OtherSetting_">Other Settings</string>
    <string name="_PDF_">PDF</string>
    <string name="_Photos_">Photos</string>
    <string name="_PrivacyAndLicense_">Privacy Statement and SOFTWARE LICENSE AGREEMENT</string>
    <string name="_ProjectorLog_">Send projector operation log information</string>
    <string name="_QuitModerator_">Quit Moderator</string>
    <string name="_QuitSession_">Disconnect All</string>
    <string name="_RegisterStartPage_">Set current web page as homepage</string>
    <string name="_RegisteredProjectorsMsg_">Projector registration is complete.</string>
    <string name="_Remote_">Remote</string>
    <string name="_ResetProfileMsg_">Do you want to reset the profile?</string>
    <string name="_ResetProfile_">Reset Profile</string>
    <string name="_Reset_">Reset</string>
    <string name="_SetToCommunicationOn_">*The projector\'s standby mode is set to communication on.</string>
    <string name="_ShareImage_">Share image</string>
    <string name="_SharedProfileName_">Shared Profile Name</string>
    <string name="_SoundSupport_">Output audio from the projector</string>
    <string name="_Title_">title</string>
    <string name="_Uri_">URL</string>
    <string name="_UserName_">User Name</string>
    <string name="_Web_">Web Page</string>
    <string name="_WhatIsModerator_">What is a Moderator?</string>
</resources>