<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/drawer_layout" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/style_theme_noab">
        <include layout="@layout/toolbar_setting"/>
        <com.epson.iprojection.ui.common.uiparts.CustomScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true">
            <LinearLayout android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="12sp" android:textColor="@color/Gray500" android:layout_gravity="start" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/_UserName_" android:layout_marginStart="16dp"/>
                <EditText android:ellipsize="end" android:id="@+id/edit_username" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:hint="@string/_EnterUserName_" android:maxLines="1" android:ems="10" android:singleLine="true" android:maxLength="32" android:inputType="text" android:imeOptions="actionDone"/>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="12sp" android:textColor="@color/Gray500" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/_SharedProfileName_" android:layout_marginStart="16dp"/>
                <EditText android:ellipsize="end" android:id="@+id/edit_sharedprofilepath" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:hint="@string/_EnterProfileURL_" android:maxLines="1" android:ems="10" android:singleLine="true" android:inputType="textUri" android:imeOptions="actionDone"/>
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="12sp" android:textColor="@color/Gray500" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/_GeneralSetup_" android:layout_marginStart="16dp"/>
                <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp">
                    <Switch android:textSize="16sp" android:textColor="@color/Font" android:id="@+id/check_enc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/_EncryptedCommunication_" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toTopOf="@+id/check_delivery" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
                    <Switch android:textSize="16sp" android:textColor="@color/Font" android:id="@+id/check_delivery" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:text="@string/_AutoDisplayDelivery_" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintBottom_toTopOf="@+id/check_used_analytics" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/check_enc"/>
                    <Switch android:textSize="16sp" android:textColor="@color/Font" android:id="@+id/check_used_analytics" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="32dp" android:text="@string/_JoinTheUsageSurvey_" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/check_delivery"/>
                    <Switch android:textSize="16sp" android:textColor="@color/Font" android:id="@+id/check_used_pj_log" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="32dp" android:text="@string/_ProjectorLog_" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/check_used_analytics"/>
                    <Switch android:textSize="16sp" android:textColor="@color/Font" android:id="@+id/check_used_AudioTransfer" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="32dp" android:text="@string/_SoundSupport_" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/check_used_pj_log"/>
                    <TextView android:textSize="16sp" android:textColor="@color/Font" android:gravity="center_vertical" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/_BandWidth_" android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/spinnerBandWidth" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="spread_inside" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/check_used_AudioTransfer"/>
                    <Spinner android:id="@+id/spinnerBandWidth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:drawSelectorOnTop="true" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/check_used_AudioTransfer"/>
                    <Switch android:textSize="16sp" android:textColor="@color/Font" android:id="@+id/check_optimiseUltraWideSPS2" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="32dp" android:text="@string/_OptimiseUltraWideSPS2_" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/spinnerBandWidth"/>
                    <Switch android:textSize="16sp" android:textColor="@color/Font" android:id="@+id/check_floatingDeliveryButton" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="32dp" android:checked="true" android:text="@string/_DeliveryButton_" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/check_optimiseUltraWideSPS2"/>
                    <Button android:id="@+id/button_other_settings" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="46dp" android:layout_marginTop="32dp" android:text="@string/_OtherSetting_" android:drawablePadding="10dp" android:drawableEnd="@drawable/ic_expand_more" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/check_floatingDeliveryButton" style="@style/borderless_button_style"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button android:layout_gravity="center" android:id="@+id/btn_clearRemotePass" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="64dp" android:layout_marginRight="16dp" android:text="@string/_DeleteRemotePasswords_"/>
                <Button android:layout_gravity="center" android:id="@+id/ResetButton" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:text="@string/_ResetProfile_"/>
                <View android:layout_width="wrap_content" android:layout_height="24dp"/>
            </LinearLayout>
        </com.epson.iprojection.ui.common.uiparts.CustomScrollView>
    </LinearLayout>
    <include layout="@layout/include_drawermenu"/>
</androidx.drawerlayout.widget.DrawerLayout>
