<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/ActionBarTextSize" android:textColor="@color/MaterialFont" android:gravity="center" android:id="@+id/text_title" android:layout_width="wrap_content" android:layout_height="@dimen/ActionBarHeight" android:text="@string/_PrivacyAndLicense_" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <View android:id="@+id/view_devider" android:background="@color/TitleBarSeparator" android:layout_width="match_parent" android:layout_height="@dimen/ActionBarSeparatorHeight" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/text_title"/>
    <ScrollView android:id="@+id/scrollview" android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="@dimen/EulaMargin" app:layout_constraintBottom_toTopOf="@+id/btn_ok" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/view_devider" app:layout_constraintVertical_bias="0" app:layout_constraintVertical_chainStyle="spread">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/NormalTextSize14" android:textColor="@color/MaterialFont" android:id="@+id/txt_eula" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/_AgreementForEula_" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <CheckBox android:textSize="@dimen/NormalTextSize14" android:textColor="@color/MaterialFont" android:id="@+id/check_agree" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/EulaRowMargin" android:text="@string/_Agree_" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_eula"/>
            <TextView android:textSize="@dimen/NormalTextSize14" android:textColor="@color/MaterialFont" android:id="@+id/txt_ga" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/EulaMarginDouble" android:text="@string/_AgreementForGa_" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/check_agree"/>
            <CheckBox android:textSize="@dimen/NormalTextSize14" android:textColor="@color/MaterialFont" android:id="@+id/check_eula_used_analytics" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/EulaRowMargin" android:text="@string/_JoinTheUsageSurvey_" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_ga"/>
            <TextView android:textSize="@dimen/NormalTextSize14" android:textColor="@color/MaterialFont" android:id="@+id/txt_copyright" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/EulaMarginDouble" android:text="@string/_CopyrightInformation_" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/check_eula_used_analytics"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.button.MaterialButton android:theme="@style/Theme.MaterialComponents" android:enabled="false" android:textSize="@dimen/ButtonTextSize" android:id="@+id/btn_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/EulaMargin" android:text="@string/_OpenApp_" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/ButtonStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
