<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="@dimen/NormalTextSize" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:text="@string/_Title_"/>
        <EditText android:id="@+id/edt_dlg_addbkmk_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:inputType="text">
            <requestFocus/>
        </EditText>
        <TextView android:textSize="@dimen/NormalTextSize" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:text="@string/_Uri_"/>
        <EditText android:id="@+id/edt_dlg_addbkmk_url" android:focusable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:inputType="text"/>
        <CheckBox android:id="@+id/chk_dlg_addbkmk_setstartpage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:text="@string/_RegisterStartPage_"/>
    </LinearLayout>
</ScrollView>
